# mc

./: .gitignore  Cargo.toml
apps/: README.md
crates/mc-tui/: Cargo.toml
crates/mc-tui/src/: app.rs  benchmark.rs  command.rs  context.rs  diff.rs  edit.rs  main.rs  prompt_plan.rs  provider.rs  telemetry.rs  token.rs  tui.rs  vim.rs
crates/mc-tui/src/agent/: claude.rs  mod.rs
crates/mc-tui/src/conversation/: tree.rs
crates/mc-tui/src/ui/: chat.rs  filesystem.rs  mod.rs  tree.rs
docs/: README.md  providers.md  safety.md  telemetry.md  tokenization.md
fixtures/: README.md
fixtures/benchmarks/: file-write-diff.json  help-command.json
schemas/: README.md
